--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,12 @@
     <artifactId>omnidrive</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.dropbox.core</groupId>
+            <artifactId>dropbox-core-sdk</artifactId>
+            <version>[1.7,1.8)</version>
+        </dependency>
+    </dependencies>
 
 </project>
