--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>berkeleydb</groupId>
             <artifactId>je</artifactId>
             <version>3.2.76</version>
