--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,18 @@
             <version>1.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mapdb</groupId>
+            <artifactId>mapdb</artifactId>
+            <version>1.0.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
