Update: - Mac dock icon - OmniDrive class

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
             <version>1.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.swt</groupId>
+            <artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId>
+            <version>4.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
